<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.maseletrico.remotecontrolkey.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ImageView
        android:id="@+id/imageViewPad"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497"
        app:srcCompat="@mipmap/remote_control_key" />

    <ImageView
        android:id="@+id/imageViewLockButton"
        android:layout_width="60dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imageviewlock"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPad"
        app:layout_constraintEnd_toEndOf="@+id/imageViewPad"
        app:layout_constraintHorizontal_bias="0.293"
        app:layout_constraintStart_toStartOf="@+id/imageViewPad"
        app:layout_constraintTop_toTopOf="@+id/imageViewPad"
        app:layout_constraintVertical_bias="0.122"
        app:srcCompat="@android:drawable/btn_radio" />

    <ImageView
        android:id="@+id/imageViewUnlockButton"
        android:layout_width="53dp"
        android:layout_height="59dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imageviewunlock"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPad"
        app:layout_constraintEnd_toEndOf="@+id/imageViewPad"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toStartOf="@+id/imageViewPad"
        app:layout_constraintTop_toTopOf="@+id/imageViewPad"
        app:layout_constraintVertical_bias="0.089999974"
        app:srcCompat="@android:drawable/btn_radio" />

    <ImageView
        android:id="@+id/imageViewSilentMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/iv_silent"
        app:layout_constraintBottom_toTopOf="@+id/imageViewPad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar_main"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@mipmap/silent_mode" />

    <TextView
        android:id="@+id/textView_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@+id/imageViewPad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar_main" />

    <ImageView
        android:id="@+id/imageView_car_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/imageViewPad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar_main"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@mipmap/ic_car" />

    <ImageView
        android:id="@+id/imageView_buzina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPad"
        app:layout_constraintEnd_toEndOf="@+id/imageViewPad"
        app:layout_constraintHorizontal_bias="0.336"
        app:layout_constraintStart_toStartOf="@+id/imageViewPad"
        app:layout_constraintTop_toTopOf="@+id/imageViewPad"
        app:srcCompat="@android:drawable/btn_radio" />

    <ImageView
        android:id="@+id/iv_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_car_name"
        app:layout_constraintVertical_bias="0.04000002"
        app:srcCompat="@mipmap/pin" />
</android.support.constraint.ConstraintLayout>
